Fixed source path resolving for windows